Fix answer option vertical alignment some more

--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,8 @@
 
 .que.multichoiceset .answer div.r0 input,
 .que.multichoiceset .answer div.r1 input {
-    margin: 0 5px;
-    padding: 0;
-    width: 15px;
+    margin: 0.3rem 0.5rem;
+    width: 14px;
 }
 
 /* Editing form. */
